# electric

./: ChangeLog  Electric.dsp  Electric.dsw  Electric.mak  Electric.vcproj  Electric.xml  Makefile.in  README.md  README.original.txt  aclocal.m4  cadrc  configure  configure.in  electric.1  electric.pro
Electric.pbproj/: project.pbxproj  strubin.pbxuser
English.lproj/: InfoPlist.strings
doc/: Doxyfile  README_DOC.txt
examples/: samples.txt
examples/pads/: pads4u.arr
examples/pla-rom/: cmos-pla-and-table  cmos-pla-or-table  nmos-pla-table  rom.txt
html/manual/: index.html
lib/: .cadrc  ALS.help  AllDialogs.c  CL.help  EVE.help  QUISC.help  bsim3.spi  evemenus.mac  evetutor.mac  pla_mocmos.txt  sclib.txt  spiceparts.mac  spicepartsS3.mac  t22t_param.spi  tsmc25.txt  umc18.txt
lib/international/: messages.po
lib/java/: romgen.java
lib/ui/: README  electric.cw  nccpre.ui  shownode.ui  shownode_ext.ui  visiblelay.ui
src/cons/: conlay.c  conlin.c  conlingtt.c  conlinprs.c  conlinttg.c  contable.c
src/db/: aidtable.c  data.c  dbchange.c  dbcontour.c  dbcontrol.c  dbcreate.c  dberror.c  dbgeom.c  dblang.c  dblangelk.c  dblangjava.cpp  dblangtcl.c  dblibrary.c  dbmath.c  dbmemory.c  dbmerge.c  dbmult.c  dbnoproto.c  dbtech.c  dbtechi.c  dbtext.c  dbvars.c
src/drc/: drc.c  drcbatch.c  drcflat.cpp  drcquick.c
src/graph/: electric.rc  graphcommon.cpp  graphmac.c  graphmac.icns  graphmac.plist  graphmac.r  graphmacX.c  graphpc.cpp  graphpc.h  graphpc.rc2  graphpc.reg  graphpc.uue  graphpcchildframe.cpp  graphpcchildframe.h  graphpccode.cpp  graphpccursorhand.cur  graphpccursormenu.cur  graphpccursorpen.cur  graphpccursortech.cur  graphpccursortty.cur  graphpcdialog.cpp  graphpcdialog.h  graphpcdialoglistbox.cpp  graphpcdialoglistbox.h  graphpcdoc.cpp  graphpcdoc.h  graphpcmainframe.cpp  graphpcmainframe.h  graphpcmsgview.cpp  graphpcmsgview.h  graphpcresource.h  graphpcstdafx.cpp  graphpcstdafx.h  graphpcview.cpp  graphpcview.h  graphqt.cpp  graphqt.h  graphqtdlg.cpp  graphqtdlg.h  graphqtdraw.cpp  (+1 more)
src/include/: compact.h  compensate.h  config.h  conlay.h  conlin.h  database.h  dbcontour.h  dblang.h  defines.h.in  drc.h  edialogs.h  efunction.h  (+37 more)
(+257 files in other folders)
